gccida/g2/mtherr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mtherr/src/real.c:6251:21: error: use of undeclared identifier 'aE'
if ( !strcmp( name, aE) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mtherr/src/real.c:6253:22: error: use of undeclared identifier 'unk_6F22A4'
v2 = ( const char *)&unk_6F22A4; 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mtherr/src/obj/real.o] Error 1
